# mingli-agent

./: .dockerignore  .gitattributes  .gitignore  .phase7-hotfix-trigger  ACCEPTANCE.md  AGENTS.md  ARCHITECTURE.md  ASTRO_ETL_GUIDE.md  ASTRO_ETL_HARDENING_REPORT.md  ASTRO_ETL_IMPLEMENTATION_REPORT.md  ASTRO_ETL_TDD_EVIDENCE_REPORT.md  BATCH_IMPORT_AND_ROLLBACK.md  BAZI_CALCULATION_CONVENTIONS.md  BAZI_DETERMINISTIC_VERIFICATION_REPORT.md  BAZI_EXPERT_RULES_V2_REPORT.md  BAZI_KNOWLEDGE_REVIEW.md  BENCHMARK_REPORT.md  CHANGELOG.md  CODEX_HANDOFF_PHASE_16_24.md  CODEX_TASK.md  COMMERCIAL_VALIDATION_GATE.md  DATASET_POLICY.md  DATA_PRIVACY_AND_CONSENT.md  DEPENDENCY_AUDIT_REPORT.md  DRAFT_PR_ASTRO_ETL_HARDENING.md  Dockerfile  EVIDENCE_CASE_ENGINE_REVIEW.md  FULL_TEST_REPORT.md  IMPLEMENTATION_REPORT.md  KNOWLEDGE_LIFECYCLE.md  KNOWLEDGE_OS_REVIEW.md  KNOWLEDGE_OS_V0_2.md  KNOWLEDGE_OS_VERIFICATION_REPORT.md  MINGLI_AGENT_V2_FINAL_REVIEW.md  MINGLI_AGENT_V2_RELEASE_CANDIDATE_REPORT.md  MINGLI_CORE_CAPABILITY_SURGE_V2_ARCHITECTURE.md  MINGLI_CORE_CAPABILITY_SURGE_V2_CAPABILITY_MATRIX.md  MINGLI_CORE_CAPABILITY_SURGE_V2_INTEGRATION_REPORT.md  MINGLI_CORE_CAPABILITY_SURGE_V2_RELEASE_HOLD_ASSESSMENT.md  MINGLI_CORE_CAPABILITY_SURGE_V2_UNSUPPORTED_MATRIX.md  (+68 more)
docs/: knowledge_repository_strategy.md
examples/: runtime_input.json  runtime_output_contract.json
knowledge/: README.md
references/: README.md
research/: CASE_QUALIFICATION_CONTRACT.md  PRODUCT_RELEASE_GATE.md
scripts/: __init__.py  astro_etl_pipeline.py  build_astro_etl_toolkit.py  build_bazi_independent_benchmarks.py  build_reproducible_dist.py  build_ziwei_traditional_rules.py  check_validation_privacy.py  inventory_knowledge_assets.py  plan_knowledge_import.py
spec/: CHANGELOG.md  MANIFEST.json  README.md  VERSION
tests/: conftest.py  test_000_phase7_patch_export.py  test_bazi_engine.py  test_bazi_expert_v2.py  test_benchmark_fixture_reuse.py  test_build_astro_etl_toolkit.py  test_build_reproducible_dist.py  test_capability_surge_v2.py  test_contract_freeze_v2.py  test_derived_contracts.py  test_derived_static_engine.py  test_evidence_case_engine.py  test_fixture_cache_contract.py  test_knowledge_os.py  test_knowledge_tools.py  test_luming_historical_corpus_v1.py  test_outcome_observation_v2.py  test_phase10_pattern_evaluation.py  test_phase11_regulation_yongshen_candidate.py  test_phase12_bazi_xiji_role_classification.py  test_phase13_bazi_luck_cycle_role_interaction.py  test_phase14_bazi_temporal_trend_evidence.py  test_phase15_bazi_tengod_domain_judgement.py  test_phase19_chenggu.py  (+32 more)
(+387 files in other folders)
