[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mingli-agent"
version = "0.1.0"
description = "MingLi Agent 的确定性核心运行时"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "jsonschema>=4.20,<5",
  "PyYAML>=6,<7",
  "referencing>=0.30,<1",
]

[project.optional-dependencies]
dev = ["pytest>=8,<10"]

[project.scripts]
mingli = "mingli.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
