[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mingli-agent"
version = "2.0.0"
description = "MingLi Agent 的确定性核心运行时"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "jsonschema>=4.20,<5",
  "PyYAML>=6,<7",
  "referencing>=0.30,<1",
  "tzdata>=2025.2; platform_system == 'Windows'",
]

[project.optional-dependencies]
dev = ["pytest>=8,<10", "build>=1.2,<2"]

[project.scripts]
mingli = "mingli.cli:main"
mingli-phase8 = "mingli.phase8_cli:main"
mingli-phase9 = "mingli.phase9_cli:main"
mingli-phase10 = "mingli.phase10_cli:main"
mingli-phase11 = "mingli.phase11_cli:main"
mingli-phase12 = "mingli.phase12_cli:main"
mingli-phase13 = "mingli.phase13_cli:main"
mingli-phase14 = "mingli.phase14_cli:main"
mingli-phase15 = "mingli.phase15_cli:main"
mingli-phase16 = "mingli.phase16_cli:main"
mingli-phase17 = "mingli.phase17_cli:main"
mingli-phase18 = "mingli.phase18_cli:main"
mingli-phase19 = "mingli.phase19_cli:main"
mingli-phase20 = "mingli.phase20_cli:main"
mingli-phase21 = "mingli.phase21_cli:main"
mingli-phase22 = "mingli.phase22_cli:main"
mingli-phase23 = "mingli.phase23_cli:main"
mingli-phase24 = "mingli.phase24_cli:main"
mingli-validation = "mingli.validation_cli:main"
test-fast = "mingli.test_gates:fast_main"
test-benchmark = "mingli.test_gates:benchmark_main"
test-real-case = "mingli.test_gates:real_case_main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"mingli.contracts" = ["schemas/*.json"]
"mingli.derived.data" = ["*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
  "fast: ordinary unit and integration tests expected to finish quickly",
  "benchmark: deterministic or packaging benchmarks with a longer timeout",
  "real_case: real-case validation contracts and synthetic dry-run coverage",
]
